// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitPipeline — template snapshots > emits stable code for "Empty" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        pass  # empty pipeline
    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "Encrypt + sign (PQ)" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · AES-256-GCM · generate ──
        try:
            key_t1 = s.generate_aes256(token=True)
            print('%s key · handle=%d' % ('AES-256-GCM', key_t1))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · AES-256-GCM · encrypt ──
        try:
            iv_t2 = os.urandom(12)
            result_t2 = s.encrypt_gcm(key_t1, pipeline_input, iv_t2)
            print('%s ciphertext · %d B' % ('AES-256-GCM', len(result_t2)))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · SHA3-256 · digest ──
        try:
            result_t3 = s.digest(p11.CKM_SHA3_256, result_t2)
            print('%s · %s' % ('SHA3-256', result_t3.hex()[:32]))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · generate ──
        try:
            pub_t4, priv_t4 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t4, priv_t4))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ML-DSA-65 · sign ──
        try:
            result_t5 = s.sign(priv_t4, result_t3, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t5)))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "Hybrid signature" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-DSA-65 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t1, priv_t1))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ECDSA P-256 · generate ──
        try:
            pub_t2, priv_t2 = s.generate_ec_p256(token=True)
            print('%s keypair · pub=%d priv=%d' % ('ECDSA P-256', pub_t2, priv_t2))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · SHA-256 · digest ──
        try:
            result_t3 = s.digest(p11.CKM_SHA256, pipeline_input)
            print('%s · %s' % ('SHA-256', result_t3.hex()[:32]))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · sign ──
        try:
            result_t4 = s.sign(priv_t1, result_t3, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t4)))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ECDSA P-256 · sign ──
        try:
            result_t5 = s.sign(priv_t2, result_t3, p11.CKM_ECDSA_SHA256)
            print('%s signature · %d B' % ('ECDSA P-256', len(result_t5)))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "ML-KEM round trip" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-KEM-768 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_kem(p11.CKP_ML_KEM_768, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-KEM-768', pub_t1, priv_t1))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ML-KEM-768 · encapsulate ──
        try:
            result_t2, key_t2 = s.encapsulate(pub_t1)
            print('%s encapsulate · ct=%d B secret=%d B'
                  % ('ML-KEM-768', len(result_t2), len(s.value(key_t2))))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · ML-KEM-768 · decapsulate ──
        try:
            key_t3 = s.decapsulate(priv_t1, result_t2)
            result_t3 = s.value(key_t3)
            print('%s decapsulate · secret=%d B match=%s'
                  % ('ML-KEM-768', len(result_t3), result_t3 == s.value(key_t2)))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;

exports[`emitPipeline — template snapshots > emits stable code for "PQ TLS handshake" 1`] = `
""""Generated by the pqctoday sandbox pipeline builder.

Runs against the softhsmv3 token through the bundled p11 package, which negotiates
the PKCS#11 v3.2 interface with C_GetInterface. Keys are created as TOKEN objects
(token=True below), so they survive this session closing.

s.sign()/s.generate_*()/etc. are p11's own convenience API (the same public
surface as pqctoday-sandbox/samples/py/p11, which runs this exact script against
a real libsofthsmv3.so) — not literal PKCS#11 C_* function names. Each one really
does issue the real calls underneath (s.sign() -> C_SignInit/C_Sign,
s.generate_ml_dsa() -> C_GenerateKeyPair, ...) — see this run in the Session
activity Log tab for the literal C_* call trace.
"""
import os
import p11
from p11 import Module

PIN = os.environ.get('PKCS11_PIN', '1234')
pipeline_input = b'pqctoday sandbox payload'

with Module() as hsm:
    print('PKCS#11 interface · v%d.%d' % hsm.interface_version)
    s = hsm.open_session(pin=PIN)
    try:
        # ── t1 · ML-KEM-768 · generate ──
        try:
            pub_t1, priv_t1 = s.generate_ml_kem(p11.CKP_ML_KEM_768, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-KEM-768', pub_t1, priv_t1))
            print('###STEP t1 ok###')
        except Exception as _e:
            print('###STEP t1 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t2 · ML-KEM-768 · encapsulate ──
        try:
            result_t2, key_t2 = s.encapsulate(pub_t1)
            print('%s encapsulate · ct=%d B secret=%d B'
                  % ('ML-KEM-768', len(result_t2), len(s.value(key_t2))))
            print('###STEP t2 ok###')
        except Exception as _e:
            print('###STEP t2 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t3 · ML-KEM-768 · decapsulate ──
        try:
            key_t3 = s.decapsulate(priv_t1, result_t2)
            result_t3 = s.value(key_t3)
            print('%s decapsulate · secret=%d B match=%s'
                  % ('ML-KEM-768', len(result_t3), result_t3 == s.value(key_t2)))
            print('###STEP t3 ok###')
        except Exception as _e:
            print('###STEP t3 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t4 · ML-DSA-65 · generate ──
        try:
            pub_t4, priv_t4 = s.generate_ml_dsa(p11.CKP_ML_DSA_65, token=True)
            print('%s keypair · pub=%d priv=%d' % ('ML-DSA-65', pub_t4, priv_t4))
            print('###STEP t4 ok###')
        except Exception as _e:
            print('###STEP t4 error### %s: %s' % (type(_e).__name__, _e))
            raise

        # ── t5 · ML-DSA-65 · sign ──
        try:
            result_t5 = s.sign(priv_t4, pipeline_input, p11.CKM_ML_DSA)
            print('%s signature · %d B' % ('ML-DSA-65', len(result_t5)))
            print('###STEP t5 ok###')
        except Exception as _e:
            print('###STEP t5 error### %s: %s' % (type(_e).__name__, _e))
            raise

    finally:
        s.logout()
        s.close()"
`;
